2009.12.01: David Nichols
	* implemented instantiating variables with default values when defined
	  with hard types of simple types; enforced requiring assignments for
	  variables defined as complex types
	* return nothingTypeInfo as the output type for local variable
	  declarations without any type information if not assigning to allow
	  more programming errors to be caught at parse time

2009.11.30: David Nichols
	* implemented 'invalid-operation' warning to warn when an expression
	  always returns NOTHING, for example
	* added parse-time type checking to the '.', '[]', and 'keys'
	  operators to raise the INVALID-OPERATION warning whenever it's clear
	  at parse time that the given expressions will always return NOTHING
	* added parse-time type checking to the '?:', shift, pop, and push
	  operators
        * fixed a bug returning the last builtin data type ID
	* added callreference/closure call parse-time type checking
	* implemented UserFuntion::setupCall() so code to set up arguments and
	  the argv variable can be shared between UserFunction::call() and
	  UserFunction::callConstructor()
	* implemented return value type checking at parse time
	* implemented parse-time type checking for the splice and unshift
	  operators
	* implemented parse-time type checking for the rest of operators that
	  need it at the moment and also implemented invalid-operation
	  warnings where appropriate

2009.11.28: David Nichols
	* fixed a memory leak in runtime hard type exceptions in lvalue
	  assignments
	* fixed parse time hard type checking with operators that change
	  lvalues (++, --, &=, etc)
	* implemented parse-time checks for hard typing in += operator
	* implemented parse-time checks for hard typing in -= operator
	* implemented parse-time checks for hard typing in *= and /= operators

2009.11.27: David Nichols
	* implemented a new warning: "non-existant-method-call" - this is for
	  method calls to expressions that evaluate to a class known at parse